@@ -18,6 +18,8 @@
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA 
 
+#if !MONO
+
 using System;
 using System.Data;
 using MySql.Data.MySqlClient;
@@ -110,3 +112,5 @@ namespace MySql.Data.MySqlClient.Tests
 
 	}
 }
+
+#endif
